--- a/config.json
+++ b/config.json
@@ -1,24 +1,25 @@
 {
     "type": "tabu",
-    "isCycle": 1,
+    "isCycle": 0,
     "droneVelocity": 20.8619,
     "techVelocity": 15.557,
-    "numDrone": 3,
-    "numTech": 3,
-    "minTabuDuration": 5,
-    "maxTabuDuration": 10,
+    "numDrone": 2,
+    "numTech": 2,
+    "minTabuDuration": 3,
+    "maxTabuDuration": 3,
     "droneLimitationFightTime": 7200,
     "sampleLimitationWaitingTime": 3600,
     "tabuMaxIter": 500,
     "tabuNotImproveIter": 200,
     "tabuAlpha1": 1,
     "tabuAlpha2": 1,
+    "tabuAlpha3": 1,
     "tabuBeta": 0.5,
     "tabuEpsilon": 1e-3,
     "tabuNumRunPerDataSet": 1,
     "maxEjectionLevel": 2,
     "dataPath": "data/",
-    "dataName": "20.10.2.txt",
+    "dataName": "10.5.1.txt",
     "ws": "D:/Study/Lab/Soictv1/",
     "resultFolder": "D:/Study/Lab/Soictv1/result/50percent/"
 }
